updates for day 2

--- a/links.html
+++ b/links.html
@@ -1,7 +1,8 @@
 <div><a href="http://localhost:9966/petclinic/swagger-ui/index.html">Petclinic REST Swagger</a></div>
 <div><a href="http://localhost:8080">Petclinic GUI</a></div>
 <div><a href="http://localhost:5601/app/discover">Kibana Discover</a></div>
-<div><a href="http://localhost:3000/d/APfxHSzmk/jmeter-generic-dashboard">Grafana JMeter Dashboard</a>
+<div><a href="http://localhost:3000">Grafana JMeter Dashboard</a>
     Username: admin,
     Password: TestingPro
+    <div><a href="http://localhost:5601/app/discover">Kibana Discover</a></div>
 </div>
